# TCP-Server-System-Monitor

./: .gitigonre  .notes.txt  CMakeLists.txt  LICENSE  README.md  system_monitor.h
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
include/: client.h  main.h  server.h
server/: CMakeLists.txt
server/include/: main.h
server/src/: main.cpp  server.cpp  system_monitor.cpp
src/: main.cpp  server.cpp  system_monitor.cpp
tests/: a.out  tests.cpp
